ui: fix omnibar on dark mode

--- a/packages/ui-default/theme/dark.styl
+++ b/packages/ui-default/theme/dark.styl
@@ -375,3 +375,18 @@ $hover-background-color = #424242
       border-bottom-color: #1d1d1d
     }
   }
+
+  .omnibar-toggle
+    background-color: $main-background-color
+    color: $content-color
+
+  .omnibar-main 
+    color: $content-color
+    
+    input
+      background-color: $main-background-color !important
+      border-color: #3d3d3d !important
+    
+    .omnibar-content-section
+      background-color: $main-background-color !important
+      border-color: #3d3d3d !important
